--- a/Sponge Experiment (Organized with keras image load).ipynb
+++ b/Sponge Experiment (Organized with keras image load).ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "99c53cc4-8833-43ff-a72c-eb9a2a7a27cb",
+   "id": "c6b5f372-7747-4baa-955c-54d5df10e652",
    "metadata": {
     "tags": []
    },
    "source": [
     "# 3-class classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc4332dc-3a6e-49e5-adc5-b2f6618acb91",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Here is a quickly put together example of the code if using tf.keras.preprocessing.image_dataset_from_directory. This version allows all the images to be loaded with a drastically less time and memory taken. A risk is if the images do not fit the (224,224) shape, it will not load and doesn't indicate which image that is"
    ]
   },
   {
